Add choro lab materials

--- a/references.bib
+++ b/references.bib
@@ -6,3 +6,11 @@
 	date = {2022-07-22},
 	url = {http://dx.doi.org/10.31219/osf.io/xcdms}
 }
+
+
+@misc{rey2023geographic,
+  title={Geographic Data Science with Python},
+  author={Rey, SJ and Arribas-Bel, D and Wolf, LJ},
+  year={2023},
+  publisher={CRC Press}
+}
